tests/snapshots/scanner_tests__literals__boolean_literals.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    True,
    False,
    Eof,
]
