tests/snapshots/scanner_tests__literals__empty_string.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    String(
        "",
    ),
    Eof,
]
