tests/snapshots/scanner_tests__literals__invalid_escape_sequence.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    Error(
        "Invalid escape sequence: \\x",
    ),
    Identifier(
        "x",
    ),
    Identifier(
        "invalid\"",
    ),
    Eof,
]
