tests/snapshots/scanner_tests__literals__number_literal.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    Number(
        "42",
    ),
    Eof,
]
