tests/snapshots/scanner_tests__literals__string_literal.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    String(
        "hello world",
    ),
    Eof,
]
