tests/snapshots/scanner_tests__literals__string_with_backslash.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    String(
        "path\\to\\file",
    ),
    Eof,
]
