tests/snapshots/scanner_tests__literals__string_with_escapes.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    String(
        "hello\nworld\t\"quoted\"",
    ),
    Eof,
]
