tests/snapshots/scanner_tests__literals__unterminated_string.snap
---
source: tests/scanner_tests.rs
expression: token_kinds(&tokens)
---
[
    Error(
        "Unterminated string literal",
    ),
    Eof,
]
